--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<div class="rubashka" id="rubashka4"><img src="pics/Rubashka4.jpg"></div>
 	</div>
 	<div class="ds">
-		<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#rubashka_box">
+		<button type="button" class="btn btn-dark" data-toggle="collapse" data-target="#rubashka_box">
 			Sleeves
 		</button>
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+		<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#myModal">
 			Rules
 		</button>
 
@@ -46,15 +46,15 @@
 
 		      <!-- Modal footer -->
 		      <div class="modal-footer">
-		        <button type="button" class="ruleButton btn btn-primary" data-dismiss="modal" style="">Close</button>
+		        <button type="button" class="ruleButton btn btn-dark" data-dismiss="modal" style="">Close</button>
 		      </div>
 
 		    </div>
 		  </div>
 		</div>
-		<button type="button" class="btn btn-primary collapsed" data-toggle="collapse" data-target="#demo" 				aria-expanded="false">Difficulty
+		<button type="button" class="btn btn-dark collapsed" data-toggle="collapse" data-target="#demo" 				aria-expanded="false">Difficulty
 		</button>
-		<button id="startButton" type="button" class="btn btn-primary" data-toggle="collapse" data-target="#board">Start</button>
+		<button id="startButton" type="button" class="btn btn-dark" data-toggle="collapse" data-target="#board">Start</button>
 		<div id="secondo" class="secondometr"></div>
 		<div id="demo" class="collapse">
 				<div class="diff card card-1"><a href="#"><p id="diff1">Easy</p></a></div>
